--- a/.obsidian/snippets/headings.css
+++ b/.obsidian/snippets/headings.css
@@ -15,7 +15,7 @@
 }
 
 body {
-  --h1-size: 52px;
+  --h1-size: 57px;
   --h1-font: 'PP Neue Machina Plain';
   --h1-weight: 300;
   --h1-color: #8fbcbb;
@@ -44,4 +44,39 @@ body {
 }
 .inline-title:focus {
   color: var(--h4-color);
+}
+
+@media (max-width: 767px) {
+  body {
+  --h1-size: 36px;
+  --h1-font: 'PP Neue Machina Plain';
+  --h1-weight: 300;
+  --h1-color: #8fbcbb;
+  
+  --h2-size: 24px;
+  --h2-font: 'PP Neue Machina Plain';
+  --h2-weight: 300;
+  --h2-color: #8fbcbb;
+  
+  --h3-size: 18px;
+  --h3-font: 'PP Neue Machina Plain';
+  --h3-weight: 400;
+  --h3-color: #8fbcbb;
+  
+  --h4-size: 14px;
+  --h4-font: 'PP Neue Machina Plain';
+  --h4-weight: 400;
+  --h4-color: #8fbcbb;
+}
+
+.inline-title {
+  font-family: var(--h4-font);
+  font-size: var(--h4-size);
+  font-weight: var(--h4-weight);
+  color:#4c566a;
+}
+.inline-title:focus {
+  color: var(--h4-color);
+}
+  
 }
