--- a/.obsidian/snippets/headings.css
+++ b/.obsidian/snippets/headings.css
@@ -8,7 +8,15 @@
 
 @font-face {
   font-family: 'PP Neue Machina Plain Regular';
-  src: local('PP Neue Machina Plain');
+  src: local('PP Neue Machina Plain Regular');
+  font-weight: 400;
+  font-display: swap;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'PP Neue Machina Plain Ultrabold';
+  src: local('PP Neue Machina Plain Ultrabold');
   font-weight: 400;
   font-display: swap;
   font-style: normal;
@@ -20,19 +28,18 @@ body {
   --h1-weight: 300;
   --h1-color: #8fbcbb;
   
-  --h2-size: 37px;
+  --h2-size: 32px;
   --h2-font: 'PP Neue Machina Plain';
   --h2-weight: 300;
   --h2-color: #8fbcbb;
   
-  --h3-size: 26px;
+  --h3-size: 22px;
   --h3-font: 'PP Neue Machina Plain';
   --h3-weight: 400;
   --h3-color: #8fbcbb;
   
-  --h4-size: 22px;
-  --h4-font: 'PP Neue Machina Plain';
-  --h4-weight: 400;
+  --h4-size: 14px;
+  --h4-font: 'PP Neue Machina Plain Ultrabold';
   --h4-color: #8fbcbb;
 }
 
@@ -48,35 +55,21 @@ body {
 
 @media (max-width: 767px) {
   body {
-  --h1-size: 36px;
-  --h1-font: 'PP Neue Machina Plain';
-  --h1-weight: 300;
-  --h1-color: #8fbcbb;
-  
-  --h2-size: 24px;
-  --h2-font: 'PP Neue Machina Plain';
-  --h2-weight: 300;
-  --h2-color: #8fbcbb;
-  
-  --h3-size: 18px;
-  --h3-font: 'PP Neue Machina Plain';
-  --h3-weight: 400;
-  --h3-color: #8fbcbb;
-  
-  --h4-size: 14px;
-  --h4-font: 'PP Neue Machina Plain';
-  --h4-weight: 400;
-  --h4-color: #8fbcbb;
-}
+    --h1-size: 36px;
+    --h2-size: 24px;
+    --h3-size: 14px;
+    --h4-size: 11px;
+    --font-text-size: 12px !important;
+  }
 
-.inline-title {
-  font-family: var(--h4-font);
-  font-size: var(--h4-size);
-  font-weight: var(--h4-weight);
-  color:#4c566a;
-}
-.inline-title:focus {
-  color: var(--h4-color);
-}
+  .inline-title {
+    font-family: var(--h4-font);
+    font-size: var(--h4-size);
+    font-weight: var(--h4-weight);
+    color: #4c566a;
+  }
+  .inline-title:focus {
+    color: var(--h4-color);
+  }
   
 }
